--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -20,9 +20,17 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "com.android.support:support-v4:26.1.0"
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
+    implementation "com.android.support:design:26.1.0"
+    compile 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
+
+    compile 'com.google.code.gson:gson:2.8.2'
+
+    compile "android.arch.lifecycle:extensions:1.0.0"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
+    implementation "android.arch.lifecycle:runtime:1.0.0"
 
 
 
