--- a/data/src/main/AndroidManifest.xml
+++ b/data/src/main/AndroidManifest.xml
@@ -1,2 +1,3 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dk.sdu.gruppen.data" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="dk.sdu.gruppen.data" >
+    <uses-permission android:name="android.permission.INTERNET" />
+    </manifest>
