--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -29,7 +29,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
     implementation "com.android.support:design:26.1.0"
     compile 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
-    compile 'com.google.android.gms:play-services-location:9.2.0'
 
     compile 'com.google.code.gson:gson:2.8.2'
 
@@ -37,10 +36,18 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
     implementation "android.arch.lifecycle:runtime:1.0.3"
 
+
+    compile 'com.karumi:dexter:4.1.0'
+    compile 'com.jakewharton.timber:timber:4.5.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.jakewharton:butterknife:8.5.1'
+    implementation 'com.google.android.gms:play-services-maps:11.6.2'
+    compile 'com.google.android.gms:play-services:11.6.2'
+    compile 'com.google.android.gms:play-services-location:11.6.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile project(path: ':domain')
+
 }
