--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -44,8 +44,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.jakewharton:butterknife:8.5.1'
-    implementation 'com.google.android.gms:play-services-maps:11.6.2'
+    compile 'com.google.android.gms:play-services-maps:11.6.2'
     compile 'com.google.android.gms:play-services:11.6.2'
+    compile 'com.google.maps:google-maps-services:0.2.5'
+    compile 'com.google.maps.android:android-maps-utils:0.3.4'
     compile 'com.google.android.gms:play-services-location:11.6.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile project(path: ':domain')
