--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     compile 'com.google.maps.android:android-maps-utils:0.3.4'
     compile 'com.google.android.gms:play-services-location:11.6.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.5'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile project(path: ':domain')
 
 }
