--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -32,6 +32,11 @@
             android:name=".map.MapsActivity"
             android:label="Travelling"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <service
+            android:name=".map.UploadJob"
+            android:label="Upload"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
 
 </manifest>
