--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile project(path: ':domain')
 
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
